<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MP3player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_single">single</string>
    <string name="action_list">list</string>
    <string name="action_exit">exit</string>
    <string name="updateSongs">更新歌曲信息</string>
    <string name="managerLists">添加列表</string>
    <string name="songlist">歌曲列表</string>
    <string name="add_songs">添加歌曲</string>
    <string name="delete_songs">删除歌曲</string>
    <string name="list_info">列表信息</string>
    <string name="edit_list">确认编辑</string>
    <string name="delete_list">删除列表</string>
    <string name="list_name">列表名:</string>
    <string name="list_class">类别:</string>
    <string name="list_tag">标签:</string>
    <string name="list_info_detail">列表描述:</string>
    <string name="yes">确定</string>

</resources>
